styling for brand logo and product display page;

--- a/products/templates/base.html
+++ b/products/templates/base.html
@@ -116,9 +116,14 @@
 					</li>
 				</ul>
 			</div>
-			<div class="container" >
+			<div class="container-fluid" >
 				<div class="navbar-header hidden-xs">
-					<img src="{% static 'images/MusicInTheMeadowLogoRound.jpg' %}"<a class="navbar-brand" href="/">Brand</a>
+					<a class="navbar-brand" href="/">
+						<!--<img class = 'navbar-left'  style='width:50px ' src="{% static 'products/MusicInTheMeadowLogoRound.jpg' %}">-->
+						Music in the Meadow
+					</a>
+					<br>
+					<br>
 				</div>
 
 				<ul class="nav navbar-nav navbar-right mobile-bar">
