--- a/products/static/products/style.css
+++ b/products/static/products/style.css
@@ -149,12 +149,16 @@ a:hover
 
 .item{
     margin-left:20px;
+    outline: 10px solid orange;
+    padding: 0px;
+    margin-right: 20px;
 }
 .item.list-group-item
 {
     float: none;
     width: 100%;
     background-color: #fff;
+
     margin-bottom: 10px;
 }
 .item.list-group-item:nth-of-type(odd):hover,.item.list-group-item:hover
@@ -210,4 +214,8 @@ color: white;
 .footer_link{
 color:white;
 text_decoration:overline;
+}
+
+.product_picture{
+    padding:20px;
 }
