--- a/products/templates/home.html
+++ b/products/templates/home.html
@@ -28,16 +28,16 @@
         <!--</div>-->
     <!--{% endfor %}-->
 <!--</div>-->
- <div id="products" class="row list-group">
+ <div id="products" class="row list-group text-center">
      <br>
      <br>
      <br>
      <br>
 {% for product in products %}
-        <div class="item  col-xs-4 col-lg-4 text-center">
+        <div class="item  col-xs-4 col-md-6 col-lg-4 text-center">
             <div class="thumbnail">
                 <!--<img class="group list-group-image" src="{{product.image.url}}" width="250x" height="400px" alt="" />-->
-                <a href="{{product.get_absolute_url}}"><img class="group list-group-image" src="{{ product.image.url }}" alt=""  style="max-height:200px"/></a>
+                <a class='product_picture' href="{{product.get_absolute_url}}"><img class="group list-group-image" src="{{ product.image.url }}" alt=""  style="max-height:200px;"/></a>
                 <div class="caption">
                     <h4 class="group inner list-group-item-heading">
                         {{product.title|truncatechars:30}}</h4>
